<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/>
    </parent>

    <name>pegasus-api-restful</name>
    <description>API RESTful gerada com OpenAPI Generator</description>
    <packaging>jar</packaging>
    <groupId>br.com.pegasus.api.rest</groupId>
    <artifactId>pegasus-api-restful</artifactId>
    <version>1.0.0</version>

    <properties>
        <!-- GERAL -->
        <java.version>17</java.version>
        <path.resources>${project.basedir}/src/main/resources</path.resources>

        <!-- OPENAPI -->
        <openapi.inputSpec>${path.resources}/openapi.yaml</openapi.inputSpec>
        <openapi.apiPackage>br.com.pegasus.gen.openapi.api</openapi.apiPackage>
        <openapi.modPackage>br.com.pegasus.gen.openapi.type</openapi.modPackage>
    </properties>

    <dependencies>
        <dependency>
            <!-- Fornece suporte para criar APIs REST e aplicações web usando Spring MVC.
                 Inclui Tomcat embutido como servidor web, suporte a JSON via Jackson
                 e outras integrações essenciais para construir endpoints RESTful. -->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <!-- Biblioteca principal do Jackson para serialização e desserialização de objetos Java em JSON
                 e vice-versa. Permite manipulação dinâmica de JSON. -->
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.2</version>
        </dependency>

        <dependency>
            <!-- Extensão do Jackson para dar suporte a XML.
                 Permite converter documentos XML em JSON e objetos Java, e também gerar XML a partir deles. -->
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>2.18.2</version>
        </dependency>

        <dependency>
            <!-- Integração do OpenAPI 3 (Swagger) com Spring MVC.
                 Gera automaticamente a documentação da API REST, incluindo interface Swagger UI para testes. -->
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.8.9</version>
        </dependency>

        <dependency>
            <!-- Biblioteca utilitária da Apache que fornece classes auxiliares para manipulação de Strings,
                 números, datas, objetos e coleções, reduzindo vulnerabilidades comuns em implementações manuais. -->
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
        </dependency>

        <dependency>
            <!-- Extensão do Jackson que adiciona suporte para valores null em modelos gerados via OpenAPI.
                 Garante compatibilidade ao lidar com propriedades opcionais em JSON. -->
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>0.2.2</version>
        </dependency>

        <dependency>
            <!-- Define anotações padrão de Java (javax.annotation), como @Generated, @PostConstruct, @PreDestroy.
                 Usadas em bibliotecas e frameworks para adicionar metadados em código. -->
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>

        <dependency>
            <!-- API de Servlets (javax.servlet) necessária para aplicações web baseadas em Java.
                 Usada para manipular requisições HTTP, sessões e filtros. O escopo 'provided' indica
                 que será fornecida pelo servidor de aplicação (Tomcat embutido no caso do Spring Boot). -->
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.0.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <!-- Fornece suporte a JPA (Java Persistence API) para persistência de dados.
                 Inclui integração com Hibernate e abstrações de repositórios Spring Data. -->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <!-- Implementa validação de dados via Bean Validation (JSR 380).
                 Usado em conjunto com anotações como @NotNull, @Size, @Email para validar entidades e DTOs. -->
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>8.0.2.Final</version>
        </dependency>

        <dependency>
            <!-- Banco de dados em memória H2, útil para testes e desenvolvimento.
                 Suporta SQL padrão e console web para administração. -->
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <!-- Ferramenta para reduzir boilerplate em classes Java.
                 Gera automaticamente getters, setters, construtores, equals/hashCode e builders via anotações. -->
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <!-- Núcleo do Log4j2, responsável por implementação de logging altamente configurável e performático. -->
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.22.0</version>
        </dependency>

        <dependency>
            <!-- API do Log4j2 que define as interfaces de logging usadas pela aplicação
                 e que são implementadas pelo log4j-core. -->
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.22.0</version>
        </dependency>

        <dependency>
            <!-- Define a especificação Bean Validation (JSR 380).
                 Fornece apenas a API, usada em conjunto com implementações como Hibernate Validator. -->
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>2.0.1.Final</version>
        </dependency>

        <dependency>
            <!-- Anotações auxiliares da JetBrains (ex.: @NotNull, @Nullable).
                 Melhoram a análise estática do código e integração com IDEs. -->
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>26.0.2</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <!-- Motor de templates Thymeleaf integrado ao Spring Boot.
                 Permite renderizar páginas HTML dinâmicas no lado do servidor com suporte a expressões e fragmentos. -->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>7.10.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <id>openapi</id>
                        <configuration>
                            <inputSpec>${openapi.inputSpec}</inputSpec>
                            <apiPackage>${openapi.apiPackage}</apiPackage>
                            <modelPackage>${openapi.modPackage}</modelPackage>
                            <templateDirectory>${openapi.tempDirect}</templateDirectory>
                            <skipValidateSpec>true</skipValidateSpec>
                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                            <generatorName>spring</generatorName>
                            <configOptions>
                                <async>true</async>
                                <useTags>true</useTags>
                                <dateLibrary>java8</dateLibrary>
                                <returnResponse>true</returnResponse>
                                <useSpringBoot3>true</useSpringBoot3>
                                <delegatePattern>true</delegatePattern>
                                <openApiNullable>false</openApiNullable>
                                <generateBuilders>true</generateBuilders>
                                <useBeanValidation>false</useBeanValidation>
                                <booleanGetterPrefix>is</booleanGetterPrefix>
                                <useSwaggerAnnotations>false</useSwaggerAnnotations>
                                <hideGenerationTimestamp>true</hideGenerationTimestamp>
                            </configOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
